# spek

./: .gitignore  .gitmodules  AUTHORS  AUTHORS.md  CREDITS.md  ChangeLog  INSTALL.md  LICENCE.md  MANUAL.md  Makefile  Makefile.am  NEWS  README  README.md  autogen.sh  bundle.sh  configure.ac
.github/workflows/: build-macOS.yml  build-windows-x64.yml
.tx/: config
bockbuild/profiles/spek/: packages.py  profile.darwin.py
bockbuild/profiles/spek/skeleton.darwin/Contents/MacOS/: Spek
bockbuild/profiles/spek/skeleton.darwin/Contents/Resources/etc/gtk-2.0/: gtkrc
data/: Makefile.am  spek.desktop.in  spek.desktop.in.in  spek.metainfo.xml.in
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
lib/: Makefile.am  spek-audio.c  spek-audio.h  spek-fft.c  spek-fft.h  spek-palette.h  spek-pipeline.c  spek-pipeline.h  spek-utils.c  spek-utils.h
lic/: zlib
man/: Makefile.am  spek.1  spek.1.in
osx/: Info.plist  README  bundle.sh  gtkrc  launcher.sh  spek.bundle
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lv.po  nb.po  nl.po  nn.po  pl.po  pt_BR.po  ru.po  sk.po  spek.pot  sr@latin.po  sv.po  th.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile.am  main.c  spek-artwork.cc  spek-artwork.h  spek-artwork.hh  spek-audio-desc.cc  spek-audio-desc.h  spek-audio-desc.hh  spek-audio.c  spek-audio.cc  spek-audio.h  spek-events.cc  spek-events.h  spek-events.hh  spek-fft.c  spek-fft.cc  spek-fft.h  spek-message-bar.vala  spek-palette.c  spek-palette.cc  spek-palette.h  spek-pipeline.c  spek-pipeline.cc  spek-pipeline.h  spek-pipeline.vala  spek-platform.c  spek-platform.cc  spek-platform.h  spek-platform.hh  spek-preferences-dialog.cc  spek-preferences-dialog.h  spek-preferences-dialog.hh  spek-preferences-dialog.vala  spek-preferences.cc  spek-preferences.h  spek-preferences.hh  spek-preferences.vala  spek-ruler.cc  spek-ruler.h  spek-ruler.hh  (+14 more)
tests/: Makefile.am  perf.cc  test-audio-info.cc  test-audio-read.cc  test-audio.cc  test-fft.cc  test-utils.c  test-utils.cc  test.c  test.cc  test.h
tests/samples/: 1ch-96000Hz-24bps.ape  1ch-96000Hz-24bps.flac  1ch-96000Hz-24bps.wv  2ch-44100Hz-16bps.m4a  2ch-44100Hz-q100.m4a  2ch-44100Hz-std.mpc  2ch-44100Hz-v1.wma  2ch-44100Hz-v2.wma  2ch-44100Hz.ac3  2ch-44100Hz.dts  2ch-48000Hz-16bps.ape  2ch-48000Hz-16bps.flac  2ch-48000Hz-16bps.wv
vapi/: Makefile.am  config.vapi  spek-audio.vapi  spek-fft.vapi  spek-platform.vapi  sys.vapi
web/: app.yaml  bitcoin  index.html  man-0.8.0.html  man-0.8.1.html  man-0.8.2.html  man-0.8.4.html  man-0.8.5.html  nginx.conf  style.css  upload
wiki/: LinuxInstall.wiki  OsxInstall.wiki  Source.wiki  UnixInstall.wiki  WindowsInstall.wiki
win/: bundle.sh  make-win32.sh  spek.rc  spek.wxs
